--- a/Leetcode/14. Longest Common Prefix/C/.vscode/settings.json
+++ b/Leetcode/14. Longest Common Prefix/C/.vscode/settings.json
@@ -32,5 +32,10 @@
     "**/.*/**",
     "**/.vscode",
     "**/.vscode/**"
-  ]
+  ],
+  "files.associations": {
+    "*.html": "html",
+    "stdio.h": "c",
+    "limits.h": "c"
+  }
 }
